<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:padding="10dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FF0000"
        android:text="@string/redBtn"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="#07FF00"
        android:text="@string/greenBtn"
        android:textColor="#000000"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFDD00"
        android:text="@string/yellowBtn"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#0008FF"
        android:text="@string/blueBtn"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/whiteBtn"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FF00BD"
        android:text="@string/pinkBtn"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>